# 4thYearProject

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  GLOSSARY.md  IMPLEMENTATION_STATUS.md  MODULE_GUIDE.md  REPRODUCIBILITY.md  TESTING.md
paper/: AGENTS.md  iclr2026_conference.bib  iclr2026_conference.tex
src/conflux/: AGENTS.md  __init__.py
src/conflux/auth/: authorisation.py
src/conflux/benchmarks/: agentdojo.py  native.py  results.py
src/conflux/core/: AGENTS.md  artifacts.py  chat_policy.py  provenance.py  resources.py  session.py
src/conflux/execution/: operations.py
src/conflux/ites/: AGENTS.md  __init__.py  mediator.py  properties.py  reference.py  state.py
src/conflux/policy/: __init__.py  adapters.py  aws.py  base.py  owner_policy.py
src/conflux/providers/: base.py  docker.py  filesystem.py
src/conflux/sled/: AGENTS.md  benchmark_runner.py  environment.py  environment_suite.py  evaluation.py  evaluator.py  model_benchmark.py  reporting.py  scenario.py  statistics.py  system_benchmark.py  task_classification.py  task_suite.py  trace.py
src/fourth_year_project/auth/: __init__.py  authorisation.py
src/fourth_year_project/benchmarks/: agentdojo.py  native.py  results.py
src/fourth_year_project/core/: __init__.py  actions.py  artifacts.py  chat_policy.py  consent.py  permissions.py  principals.py  provenance.py  resources.py  session.py
src/fourth_year_project/execution/: __init__.py  operations.py
tests/: AGENTS.md  test_artifacts.py  test_authorisation.py  test_benchmark_runner.py  test_execution.py  test_ites.py  test_ites_state.py  test_model_benchmark.py  test_policy.py  test_provenance.py
(+30 files in other folders)
