[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "conflux"
version = "0.1.0"
description = "A provenance-aware authorisation architecture for LLM-based systems."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Raya Buckley" }
]
keywords = [
    "llm",
    "security",
    "authorisation",
    "provenance",
    "agent",
    "prompt-injection",
]
dependencies = []
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
[tool.mypy]
python_version = "3.12"
strict = true
[tool.setuptools]
package-dir = { "" = "src" }
[tool.setuptools.packages.find]
where = ["src"]
